# video-host

./: .gitignore  README.md  pyproject.toml
.agents/skills/fastapi-backend/: SKILL.md  docker-expert.md  python-patterns.md  python-pro.md  senior-architect.md  senior-backend.md  senior-devops.md
.mimocode/skills/fastapi-test-coverage/: SKILL.md
url-shortener/: .coveragerc  app_lifespan.py  main.py  manage.py  movies.json  short-urls.json  stuff.py
url-shortener/api/: __init__.py  redirect_views.py
url-shortener/api/api_v1/: __init__.py
url-shortener/api/api_v1/auth/services/: __init__.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
url-shortener/api/api_v1/movies/: crud.py  dependencies.py  redis.py  views.py
url-shortener/api/api_v1/movies/views/: __init__.py  details_views.py  list_views.py
url-shortener/api/api_v1/short_urls/: crud.py  dependencies.py  redis.py  views.py
url-shortener/api/api_v1/short_urls/views/: __init__.py  details_views.py  list_views.py
url-shortener/commands/: cli.py  hello.py  tokens.py
url-shortener/core/: config.py
url-shortener/schemas/: movie.py  short_url.py
url-shortener/testing/: __init__.py
url-shortener/testing/test_api/test_api_v1/test_auth/test_services/: test_redis_tokens_helper.py
url-shortener/testing/test_api/test_api_v1/test_movies/: test_crud.py
url-shortener/testing/test_api/test_api_v1/test_short_urls/: test_crud.py
url-shortener/testing/test_schemas/: test_movie.py  test_short_url.py
