[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "FatAPI URL Shortener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "fastapi>=0.116.2",
    "uvicorn>=0.35.0",
    "redis[hiredis]>=7.4.0",
    "rich>=14.1.0",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
]

[tool.mypy]
python_version = "3.12"
files = ["url-shortener"]
mypy_path = ["url-shortener"]
cache_dir = "url-shortener/.mypy_cache"
incremental = false
sqlite_cache = false
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
