[project]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "FatAPI URL Shortener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "fastapi>=0.116.2",
    "uvicorn>=0.35.0",
    "redis[hiredis]>=7.4.0",
    "rich>=14.1.0",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]

# MYPY settings

[tool.mypy]
python_version = "3.12"
files = ["url-shortener"]
mypy_path = ["url-shortener"]
cache_dir = "url-shortener/.mypy_cache"
incremental = false
sqlite_cache = false
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
strict = true
plugins = [
    "pydantic.mypy",
]

# RUFF settings

[tool.ruff]
required-version = ">=0.11.5"

src = [
    "url-shortener",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations (ANN)
    "FAST",  # FastAPI (FAST)
]
ignore = [
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
